# eu-grants-monitor-agent

./: .gitignore  CLEANUP_COMPLETE.md  README.md  WARP.md  pyproject.toml  requirements.txt  sync_grants_to_webapp.py
config/: business_profile.template.yaml  config.template.yaml  masumi_config.template.yaml
docs/: MASUMI_INTEGRATION.md  PROJECT_STRUCTURE.md
scripts/: register_masumi_agent.py
src/grants_monitor/: __init__.py  __main__.py  api.py  main.py  masumi_agent.py
src/grants_monitor/analyzers/: opportunity_analyzer.py
src/grants_monitor/assistants/: __init__.py  application_assistant.py
src/grants_monitor/data/: __init__.py  mock_grants.py  models.py
src/grants_monitor/matchers/: profile_matcher.py
src/grants_monitor/notifiers/: email_notifier.py
src/grants_monitor/scrapers/: horizon_scraper.py
src/grants_monitor/services/: __init__.py  database.py  document_analyzer.py  document_generator.py  form_prefiller.py  user_prompter.py  web_researcher.py
src/grants_monitor/utils/: config.py  init_db.py  logger.py
webapp/: .env.production.template  .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  RAILWAY_DEPLOYMENT.md  README.md  VERCEL_DEPLOYMENT.md  deploy.sh
webapp/backend/: .env.backup  .env.example  .env.production.template  Dockerfile  SUPABASE_SETUP.md  fix_connection.py  initialize_db.py  migration.py  railway.toml  requirements.txt  schema.sql  setup_supabase.py  setup_via_api.py  test_connection.py
webapp/backend/app/: ai_assistant.py  auth.py  config.py  database.py  database_alternatives.py  grants.py  main.py  models.py  oauth_callbacks.py  payments.py  simple_grants.py  users.py
webapp/backend/migrations/: env.py
webapp/frontend/: .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
webapp/frontend/public/: grants.json
webapp/frontend/src/app/: page.tsx
webapp/frontend/src/app/login/: page.tsx
webapp/frontend/src/app/signup/: page.tsx
webapp/frontend/src/components/: Layout.tsx
webapp/frontend/src/components/layout/: Footer.tsx  Header.tsx
webapp/frontend/src/pages/: _app.tsx  _document.tsx  api-docs.tsx  contact.tsx  features.tsx  help.tsx  index.tsx  login.tsx  pricing.tsx  privacy.tsx  register.tsx  terms.tsx
webapp/frontend/src/pages/auth/: callback.tsx
webapp/frontend/src/pages/grants/: index.tsx
webapp/frontend/src/styles/: globals.css
webapp/frontend/src/types/: index.ts
webapp/frontend/src/utils/: api.ts
